--- a/fi.html
+++ b/fi.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>My Trailer Web to Git</h1>
-    <p>
+    <p style="color: blue">
       ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
       nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
