--- a/fi.html
+++ b/fi.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Trailer Web to Git</h1>
+    <h1 style="color: pink">My Trailer Web to Git</h1>
     <p style="color: blue">
       ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -15,6 +15,8 @@
       non proident, sunt in culpa qui officia deserunt mollit anim id est
       laborum.
     </p>
+
+
   </body>
 </html>
 
