--- a/fi.html
+++ b/fi.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 style="color: pink">My Trailer Web to Git</h1>
-    <p style="color: blue">
+    <h1>My Trailer Web to Git</h1>
+    <p>
       ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
       nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -15,8 +15,6 @@
       non proident, sunt in culpa qui officia deserunt mollit anim id est
       laborum.
     </p>
-
-
   </body>
 </html>
 
